kustomize/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: research-cruise-app-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet:
      sub_filter '</head>' '<script src="https://rybbit.nasus.dev/api/script.js" data-site-id="5" defer></script></head>';
      sub_filter_once on;
      sub_filter_types text/html;
spec:
  ingressClassName: nginx
  rules:
    - host: rca.nasus.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: research-cruise-app-frontend
                port:
                  name: http
  tls:
    - hosts:
        - rca.nasus.dev
      secretName: research-cruise-app-frontend-tls
